[metadata]
name = wfc
version = 0.0.0
url = https://github.com/higurashi-takuto/web-font-converter
author = higurashi-takuto
license = MIT
license_file = LICENSE
description = wfc: フォント（ OTF / TTF ）と Web フォント（ WOFF / WOFF2 ）の相互変換コマンドです。
long_description = file: README.md

[options]
zip_safe = False
packages = find:
install_requires =
  fonttools
  Brotli
  zopfli

[options.entry_points]
console_scripts =
  wfc-woff = wfc.__main__:wfc_woff
  wfc-woff2 = wfc.__main__:wfc_woff2
  wfc-otf = wfc.__main__:wfc_otf
  wfc-ttf = wfc.__main__:wfc_ttf